--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
       - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
-          java-version: 17  # Версия из pom.xml
-          distribution: 'temurin'  # Eclipse Temurin (ранее AdoptOpenJDK)
-          cache: 'maven'
+          java-version: 17  
+          distribution: 'temurin'  
+          # cache: 'maven'
       - name: Build with Maven
         run: mvn -B package
